k8s/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-deployment
  labels:
    app: example-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: example-deployment
  template:
    metadata:
      labels:
        app: example-deployment
    spec:
      containers:
      - name: dotnetcoreexample
        image: renatolcarvalho/dotnetexample
        ports:
        - containerPort: 80
