k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-service
spec:
  selector:
    app: example-deployment
  ports:
    - protocol: TCP
      port: 80
  type: NodePort
