k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: example-ingress  
spec:
  rules:
  - host: dotnetexample.com
    http:
      paths:
      - path: /
        backend:
          serviceName: example-service
          servicePort: 80
